# test_maxbit

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  setup.cfg  tox.ini
common/: bot.py  enum.py  fsm.py  settings.py
database/: engine.py  models.py
handlers/: bot.py
migrations/: env.py
migrations/versions/: 2024_12_10_1743-4bf4cc41f0f6_init.py
repositories/: task.py  user.py
services/: buttons.py  inlines.py
services/mixins/: protocol.py  task.py  user.py
