[tool.poetry]
name = "test_maxbit"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
pydantic-settings = "^2.3.3"
sentry-sdk = "^2.12.0"
black = "^24.4.2"
autoflake = "^2.3.1"
unify = "^0.5"
flake8 = "^7.1.0"
flake8-print = "^5.0.0"
isort = "^5.13.2"
tox = "^4.15.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pyrogram = "^2.0.106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true
